added fabric detail and maintance page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="keywords"
     content="admin template, RA-ADMIN admin template, dashboard template, flat admin template, responsive admin template, web app">
   <meta name="author" content="Arteam">
-  <link rel="icon" href="/assets/images/logo/favicon.png" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/images/logo/favicon.png" type="image/x-icon">
+  <!-- <link rel="icon" href="/assets/images/logo/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/images/logo/favicon.png" type="image/x-icon">  -->
   <link rel="stylesheet" href="/assets/css/style.css">
   <title>Koleksiyoner Mobilya</title>
 
